Added missing sagger and fixing code
